---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: ????
  Changes:
    - Re-added the indicator to SE condenser turbines
    - The mod now depends on `flib`
  Bugfixes:
    - Fixed the mod not accounting for non-square entity rotations, leading to incorrect indicator placements
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2021-06-07
  Features:
    - Added an internal entity blacklist
  Changes:
    - Removed the indicator from SE condenser turbines
  Bugfixes:
    - Fixed SE core mining drills showing two overlapping indicators
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2021-06-07
  Features:
    - Added "off" color option, which disables the indicator for that status (thanks justarandomgeek!)
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2021-06-07
  Features:
    - Initial release